Fix work of kitchen